Navbar are modified

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,
 	 user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Lista de cubos</title>
+	<title>Página de prueba</title>
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand" href="#">Lista de cubos</a>
+		<a class="navbar-brand" href="#">Practica</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
 		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Acerca de<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Servicios<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Contacto<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
@@ -26,7 +29,7 @@
 			</form>
 		</div>
 	</nav>
-	<h1>Lista de cubos</h1>
+	<h1>Lorem ipsum</h1>
 	<script src="assets/js/jquery-3.2.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
