--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
 	<meta name="viewport" content="width=device-width,
 	 user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Página de prueba</title>
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand" href="#">Practica</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-			</button>
-		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-					<a class="nav-link" href="#">Acerca de<span class="sr-only">(current)</span></a>
-					<a class="nav-link" href="#">Servicios<span class="sr-only">(current)</span></a>
-					<a class="nav-link" href="#">Contacto<span class="sr-only">(current)</span></a>
-				</li>
+	<div class="contenedor">
+		<nav>
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Acerca de</a></li>
+				<li><a href="#">Servicios</a></li>
+				<li><a href="#">Contacto</a></li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" placeholder="Buscar" aria-label="Search" type="text">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-			</form>
-		</div>
-	</nav>
-	<h1>Lorem ipsum</h1>
-	<script src="assets/js/jquery-3.2.1.min.js"></script>
-	<script src="assets/js/popper.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
+		</nav>
+	</div>
 </html>
