--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
 	<meta name="viewport" content="width=device-width,
 	 user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Página de prueba</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<div class="contenedor">
-		<nav>
-			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Acerca de</a></li>
-				<li><a href="#">Servicios</a></li>
-				<li><a href="#">Contacto</a></li>
-			</ul>
-		</nav>
+		<header>
+			<nav>
+				<ul>
+					<li><a href="#">Inicio</a></li>
+					<li><a href="#">Acerca de</a></li>
+					<li><a href="#">Servicios</a></li>
+					<li><a href="#">Contacto</a></li>
+				</ul>
+			</nav>
+		</header>
 	</div>
 </html>
