--- a/index.html
+++ b/index.html
@@ -20,5 +20,34 @@
 				</ul>
 			</nav>
 		</header>
+
+		<section class="main">
+			<section class="posts">
+				<article>
+					<h2>Título del artículo</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis accusamus ipsa nisi, excepturi facilis qui nobis voluptatum voluptatibus nihil eius sit sed dolores aut in quasi tempore, eaque quaerat recusandae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolor temporibus fuga, quaerat deserunt sed optio, magni quia, labore iusto sunt eum! Et, ratione enim cumque delectus quia qui commodi.</p>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis consequatur vero voluptatum, nostrum optio quo, commodi dolor ut repellendus expedita magni amet laudantium maxime fugiat, cupiditate, unde incidunt nulla. Enim. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error exercitationem, eaque. Pariatur atque iusto sed minus esse ipsum aperiam sit ut earum incidunt autem minima totam, ipsa modi aliquid, ab.</p>
+				</article>
+			</section>
+		</section>
+
+		<aside>
+			<div class="widget">
+				<h3 class="titulo">Artículos Destacados</h3>
+				<ul>
+					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+				</ul>
+			</div>	
+			<div class="widget">
+				<h3 class="titulo">Información</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita debitis ut pariatur possimus ad dolores. Sapiente temporibus, facere assumenda. Quibusdam debitis voluptas quia nisi vel veniam, corrupti animi a distinctio? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas corporis at possimus expedita explicabo voluptates, quisquam beatae cum fugiat eveniet.</p>
+			</div>
+
+		</aside>
 	</div>
 </html>
