--- a/index.html
+++ b/index.html
@@ -3,41 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Página de prueba</title>
-	<link rel="stylesheet" href="css/normalize.css">
+	<title>Layout Básica</title>
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body>	
 	<div class="contenedor">
 		<header>
 			<nav>
 				<ul>
 					<li><a href="#">Inicio</a></li>
 					<li><a href="#">Acerca de</a></li>
-					<li><a href="#">Servicios</a></li>
+					<li><a href="#">Productos</a></li>
 					<li><a href="#">Contacto</a></li>
 				</ul>
 			</nav>
 		</header>
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-		<aside>
-			<div>
-				<ul>
-					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</a></li>
-					<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-				</ul>
-			</div>
-=======
-=======
->>>>>>> 847d88b338065644a51d51aaa793687e86bec6cc
-		<section class="main">
 			<section class="posts">
 				<article>
 					<h2>Título del artículo</h2>
@@ -63,11 +43,6 @@
 				<h3 class="titulo">Información</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita debitis ut pariatur possimus ad dolores. Sapiente temporibus, facere assumenda. Quibusdam debitis voluptas quia nisi vel veniam, corrupti animi a distinctio? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas corporis at possimus expedita explicabo voluptates, quisquam beatae cum fugiat eveniet.</p>
 			</div>
-
-<<<<<<< HEAD
->>>>>>> 847d88b338065644a51d51aaa793687e86bec6cc
-=======
->>>>>>> 847d88b338065644a51d51aaa793687e86bec6cc
 		</aside>
-	</div>
+</body>
 </html>
