--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 				</ul>
 			</nav>
 		</header>
+
+		<section class="main">
 			<section class="posts">
 				<article>
 					<h2>Título del artículo</h2>
