--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Layout Básica</title>
+	<title>Página de prueba</title>
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>	
@@ -18,6 +18,7 @@
 				</ul>
 			</nav>
 		</header>
+		<section class="main">
 			<section class="posts">
 				<article>
 					<h2>Título del artículo</h2>
@@ -43,6 +44,6 @@
 				<h3 class="titulo">Información</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita debitis ut pariatur possimus ad dolores. Sapiente temporibus, facere assumenda. Quibusdam debitis voluptas quia nisi vel veniam, corrupti animi a distinctio? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas corporis at possimus expedita explicabo voluptates, quisquam beatae cum fugiat eveniet.</p>
 			</div>
-		</aside>
+	</div>
 </body>
 </html>
