--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Página de prueba</title>
+	<title>Layout Básica</title>
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>	
@@ -18,7 +19,11 @@
 				</ul>
 			</nav>
 		</header>
+
 		<section class="main">
+			<div class="imagen">
+				<img src="img/3.jpg" alt="">
+			</div>
 			<section class="posts">
 				<article>
 					<h2>Título del artículo</h2>
@@ -44,6 +49,7 @@
 				<h3 class="titulo">Información</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita debitis ut pariatur possimus ad dolores. Sapiente temporibus, facere assumenda. Quibusdam debitis voluptas quia nisi vel veniam, corrupti animi a distinctio? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas corporis at possimus expedita explicabo voluptates, quisquam beatae cum fugiat eveniet.</p>
 			</div>
+		</aside>
 	</div>
 </body>
 </html>
