--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Layout Básica</title>
+	<title>Página de prueba</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>	
@@ -49,6 +50,10 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita debitis ut pariatur possimus ad dolores. Sapiente temporibus, facere assumenda. Quibusdam debitis voluptas quia nisi vel veniam, corrupti animi a distinctio? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas corporis at possimus expedita explicabo voluptates, quisquam beatae cum fugiat eveniet.</p>
 			</div>
 		</aside>
+
+		<footer>
+			<p>Startup - Todos los Derechos Reservados 2017</p>
+		</footer>
 	</div>
 </body>
 </html>
